@@ -273,3 +273,4 @@
  13-Oct-2020  V1.640 Cast examples in schema, adjust handling of internal enumeration fallbacks
  21-Oct-2020  V1.641 Add DrugBank brand names to rcsb_chem_comp_synonyms
  23-Oct-2020  V1.642 Add rcsb_repository_holdings_combined_entry collection
+ 24-Oct-2020  V1.643 Incorporate obsolete/supersede item in rcsb_repository_holdings_combined_entry
